[package]
name = "echo-server"
version = "0.1.0"
authors = ["David Lin <davll.xc@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dependencies.async-std]
version = "1.8.0"
features = ["std", "attributes", "async-io", "async-global-executor"]
